# cli_agent

./: README.md  pyproject.toml
cli_agent/: cli.py  config.py  logging.py  permissions.py  repl.py  workspace.py
cli_agent/agent/: __init__.py  loop.py  prompts.py
cli_agent/llm/: __init__.py  openai_adapter.py  types.py
cli_agent/tools/: __init__.py  fs_tools.py  git_tools.py  shell_tools.py
